--- a/actions/football-data/config.json
+++ b/actions/football-data/config.json
@@ -1,5 +1,5 @@
 {
  “highlightedTeam”: “Poland”,
  “showZonesJson”: “{ ”BST”: ”+1”}”,
- “footballDataApiToken”: “HERE YOUR TOKEN”
+ “footballDataApiToken”: “40556ba6dab94ab68b2f0584ea958de6”
 }
